--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
 		"typescript": "^5.0.0",
 		"vite": "^4.3.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@auth/core": "^0.7.1",
+		"@auth/sveltekit": "^0.3.1"
+	}
 }
