--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
 		"svelte-check": "^3.0.1",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^4.3.0"
+		"vite": "^4.3.0",
+		"vitest": "^0.31.1"
 	},
 	"type": "module",
 	"dependencies": {
